--- a/juegopropio.html
+++ b/juegopropio.html
@@ -12,8 +12,18 @@
   <script src="./js/gameConfig.js"></script>
   <script src="./js/main.js"></script>
 
+  <h4>Manzanitas atrapadas:<span id="scoreBoard">0</span></h4>
+  <h4>Tiempo transcurrido: <span id="timeFrame">0</span></h4>
+  <small style="margin-bottom: 10px; display: inline-block;">Cada 10 segs la manzana cambiara de posicion</small>
   <div class="controlsFrame">
-    <h1>Tiempo transcurrido: <span id="timeFrame">0</span></h1>
+
+    <div class="buttonsPanel">
+      <div class="keyButtons" id="upKey">up</div>
+      <div class="keyButtons" id="downKey">down</div>
+      <div class="keyButtons" id="leftKey">left</div>
+      <div class="keyButtons" id="rightKey">right</div>
+    </div>
+
     <div>
       <select name="" id="listaPersonajes">
         <option value="enriquito">enriquito</option>
@@ -22,15 +32,16 @@
         <option value="miguelito">miguelito</option>
       </select>
 
-      <button onclick="seleccionarPersonaje(event)">Cambiar personaje</button>
+      <button onclick="seleccionarPersonaje(event)">Seleccionar Personaje</button>
+      <!-- <button onclick="restartGame()">reiniciar</button> -->
     </div>
 
-    <div class="buttonsPanel">
-      <div class="keyButtons" id="upKey">up</div>
-      <div class="keyButtons" id="downKey">down</div>
-      <div class="keyButtons" id="leftKey">left</div>
-      <div class="keyButtons" id="rightKey">right</div>
-    </div>
+
+  </div>
+
+  <div class="infoFrame">
+    Perosonaje: <span id="personajeInfo"></span> <br>
+    Manzana: <span id="manzanaInfo"></span> 
   </div>
 
 </body>
