--- a/juegopropio.html
+++ b/juegopropio.html
@@ -25,6 +25,10 @@
       <h4>Velicodad 2D: <span id="vel2d">0</span></h4>
       <h4>total boost recogidos: <span id="boostAmount">0</span></h4>
     </div>
+    <div>
+      <h4>Moblicelis Mov: <span id="MoobSpeed">4</span></h4>
+      <h4>Mooblicelis aumentara su velcidad gradualmente cada 6 segs.</h4>
+    </div>
   </div>
   <div class="controlsFrame">
 
@@ -54,7 +58,8 @@
   <div class="infoFrame">
     Perosonaje: <span id="personajeInfo"></span> <br>
     Manzana: <span id="manzanaInfo"></span> <br>
-    Boost: <span id="boostInfo"></span> 
+    Boost: <span id="boostInfo"></span> <br>    
+    Mooblicelis: <span id="moobInfo"></span> 
   </div>
 
 </body>
